Version 1.1.1 (January 14, 2021)
- Better error handling when Termbin can't be contacted.
- Update copyright year.

Version 1.1 (November 22, 2020)
- Renamed Send-Termbin to Out-Termbin.
- Defined Send-Termbin as an alias for Out-Termbin.

Version 1.0.1 (October 29, 2020)
- Added online help for the Send-Termbin cmdlet.

Version 1.0 (September 30, 2020)
- Initial release.